lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/array_get_data_unset/array_get_data_unset2/array_get_data_unset2.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/array_get_data_unset/array_get_data_unset2/array_get_data_unset2.c:34:26: error: use of undeclared identifier 's__a'
    array_get_data_unset(s__a ,str_key ,q_b__klen );
                         ^
1 error generated.
